@@ -96,10 +96,10 @@ participating-org a:link			{color:#FF7A00;}
 participating-org a:visited			{color:#FF7A00;}
 participating-org a:hover			{color:#FFAB5E;}
 participating-org a:active			{color:#FF7A00;}
-participating-org[role="1"] narrative:after, participating-org[role="funding"] narrative:after		{content:"FUNDING ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
-participating-org[role="2"] narrative:after, participating-org[role="accountable"] narrative:after	{content:"ACCOUNTABLE ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
-participating-org[role="3"] narrative:after, participating-org[role="extending"] narrative:after	{content:"EXTENDING ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
-participating-org[role="4"] narrative:after, participating-org[role="implementing"] narrative:after	{content:"IMPLEMENTING ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="1"]:after, participating-org[role="funding"]:after		{content:"FUNDING ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="2"]:after, participating-org[role="accountable"]:after	{content:"ACCOUNTABLE ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="3"]:after, participating-org[role="extending"]:after	{content:"EXTENDING ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="4"]:after, participating-org[role="implementing"]:after	{content:"IMPLEMENTING ROLE"; font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px;}
 
 span-narrative.participating-role	{font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px; text-transform:uppercase; line-height:initial;}
 
