@@ -1,9 +1,10 @@
 Development Portal (2017-05-08 shi)
 ==============================
+Fixed spacing after counter increments of participating-org list
 Fixed participating-org to not include narrative for headings
 Fixed start and end dates to accommodate v2.02 standard
 Moved reporting-org under project title in SAVi
-Fix Print friendly version with new changes
+Fixed Print friendly version with new changes
 Comment out adding actual activity dates in savi.js
 
 
